# rag-against-the-machine

./: .gitignore  Makefile  README.md  chunker_results.txt  mini_dataset.json  pyproject.toml
data/output/final_answers/: mini_dataset.json
data/output/search_results/: dataset_code_public.json  dataset_docs_public.json  mini_dataset.json  unanswered.json
data/output/search_results_and_answer/: unanswered.json
filetype-scanner/: README.md  __main__.py
filetype_scanner/: __main__.py  allowed_extensions.py
src/: __main__.py  cli.py  constants.py  models.py  pipeline.py  utils.py
src/evaluation/: metrics.py
src/generation/: llm.py  prompts.py
src/indexing/: builder.py  chunker.py  reader.py
src/retrieval/: searcher.py
