[project]
name = "rag-against-the-machine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bm25>=0.3.3",
    "bm25s>=0.3.3",
    "chromadb>=1.5.8",
    "diskcache>=5.6.3",
    "fire>=0.7.1",
    "flake8>=7.3.0",
    "langchain-text-splitters>=1.1.2",
    "mypy>=1.20.0",
    "pydantic>=2.12.5",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.4",
]
